Please see NEWS for a summary of changes since the last release suitable
for announcements.

* Wed Aug 29 2012 Thunor <thunorsif@hotmail.com>
- Added listing of the built-in extra libraries to argument --version.
- Fixed working_directory not being initialised to NULL in terminal.
- Reduced minimum libvte requirements to 0.23.5 (thanks vovchik).
- Added scrolled window to the terminal so now it resizes properly.
- Modified the terminal so that when the user types exit or it is
  killed, its variable -- which contained the pid -- is reset to zero
  and the terminal stays in that state until the application developer
  decides to reset it and re-execute the command with the clear action.

* Tue Aug 28 2012 Thunor <thunorsif@hotmail.com>
- Added support for presentwindow.
- Added examples/miscellaneous/presentwindow.
- Added some code to action_launchwindow() to check that a program isn't
  already being parsed as this process is not reetrant and it caused the
  parser to quit with a nonsensical message; now it warns and continues.
- Updated the wiki and the reference docs.

* Mon Aug 27 2012 Thunor <thunorsif@hotmail.com>
- Updated the terminal widget: its variable now contains its pid.
- Updated examples/terminal/terminal to output the pid with the signals.
- Added support for clear to the terminal widget.
- Updated the terminal widget: argv0 now defaults to /bin/sh so a
  terminal widget could simply be <terminal></terminal>.
- Added examples/miscellaneous/grabfocus.

* Sun Aug 26 2012 Thunor <thunorsif@hotmail.com>
- Updated the terminal widget so that when the user types exit or it is
  killed, the terminal resets and the command is forked again. This will
  happen before the application receives the child-exited signal.

* Sat Aug 25 2012 Thunor <thunorsif@hotmail.com>
- Added support for grabfocus to compatible widgets.
- Added examples/terminal/terminal.
- Updated the wiki and the reference docs.

* Fri Aug 24 2012 Thunor <thunorsif@hotmail.com>